force-app/main/default/objects/Patients__c/Patients__c.object-meta.xml
<CustomObject>
    <label>Patients</label>
    <nameField>
        <label>Patients ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>