force-app/main/default/objects/Patients__c/fields/Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Medical_History__c</fullName>
    <label>Medical_History</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>