force-app/main/default/objects/Patients__c/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <label>Patient_ID</label>
    <type>AutoNumber</type>
</CustomField>