force-app/main/default/objects/Patients__c/recordTypes/Inpatient.recordType-meta.xml
<RecordType>
    <fullName>Inpatient</fullName>
    <active>true</active>
    <description>Patients admitted in hospital</description>
    <label>Inpatient</label>
</RecordType>