force-app/main/default/objects/Patients__c/validationRules/Validate_Patient_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Patient_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>Contact_Number__c  = &apos;10&apos;</errorConditionFormula>
    <errorDisplayField>Contact_Number__c</errorDisplayField>
    <errorMessage>please enter a valid contact number</errorMessage>
</ValidationRule>